--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
 		"format": "prettier --plugin-search-dir . --write .",
 		"migrate": "drizzle-kit generate:pg",
-		"db-push": "drizzle-kit push:pg"
+		"db-push": "drizzle-kit push:pg",
+		"db-studio": "drizzle-kit studio"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^2.0.0",
